2004-03-27  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
     * src/gdcmUtil.[cxx|h] split in two. Additional file gdcmGlobal.[cxx|h]
       now contains all the gdcmGlobal related code.
     * minor coding style and doxygenation changes.

2004-03-26  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
     * src/gdcmUtil.[cxx|h] split in two. Additional file gdcmDebug.[cxx|h]
       now contains all the Debug related code.
     * minor clean-up of includes in src/*.cxx
     * src/gdcmUtil.[cxx|h] _cleanString C style function (replaced with
       CreateCleanString) removed.
     * src/gdcmUtil.[cxx|h] _CreateCleanString renamed to CreateCleanString
     * Doc/DoxyMainPageUser.txt added.
     * Doc/Doc/DoxyfileUsers updated to version 1.3.4 of Doxygen.
     * src/gdcmCommon.h now defines getcwd for Win32 (moved away from 
       src/gdcmDirList.cxx)

2004-03-24  Jean-Pierre Roux
     * FIX a lot of little surface modifications to be doxygen 1.3.6 compliant

2004-03-23  Jean-Pierre Roux
     * FIX Now gdcmFile::SwapZone doesn't seg faults any longer for 
           big endian made volumes
     * ENH Now gdcmParser constructor and destructor are protected to forbid 
           end user to instanciate class gdcmParser
          (only gdcmHeader and gdcmDicomDir are meaningfull)

2004-03-22 Benoit Regrain
     * FIX : src/gdcmDicomDir.cxx : make windows compilable
     * FIX : gdcmPython/gdcm.i : change gdcmStudy to gdcmDicomDirStudy and
             gdcmSerie to gdcmDicomDirSerie

2004-03-19  Jean-Pierre Roux
     * ENH Now the tree-like structure describing a DICOMDIR comming from
           an already existing DICOMDIR file is consistent with
           the home-made tree-like structure build ex-nihilo
           or build from the files held (recursively) in a Directory
           functions gdcmDicomDir::CheckBoundaries()
           gdcmObject::SetBoundaries() added

2004-03-17  Jean-Pierre Roux
     * REM (Eric Boix bug) : removal of meaningless